fix headings; clean missed section elements
remove section elements; fix headings (h2->h1, h3->h2, h4->h3)

--- a/pages/code-of-conduct.html
+++ b/pages/code-of-conduct.html
@@ -53,11 +53,9 @@
 	</nav>
 
 	<main>
-		<section>
-			<h2>The Thaumatorium's Code of Conduct</h2>
-			<img src=/images/conduct.webp alt="the Code of Conduct for this site">
-			<p>No really, that's it. I currently don't see the need to expand on this image.</p>
-		</section>
+		<h1>The comment section's Code of Conduct</h1>
+		<img src=/images/conduct.webp alt="the Code of Conduct for this site">
+		<p>No really, that's it. I currently don't see the need to expand on this image.</p>
 	</main>
 
 	<footer>
