--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -58,11 +58,7 @@
 		</style>
 		<section>
 			<!-- https://lowko.tv/setup/ -->
-			<h2 id=hardware>
-				<a href="#hardware" class="self-link"></a>
-				NostraDavid's Computer hardware and general setup
-			</h2>
-			<h1>PC</h1>
+			<h1>NostraDavid's Computer hardware and general setup</h1>
 			<h2 id=zeus-2019>
 				<a href="#zeus-2019" class="self-link"></a>
 				Zeus (2019)
