--- a/pages/praetorianpi.html
+++ b/pages/praetorianpi.html
@@ -53,13 +53,12 @@
 	</nav>
 
 	<main>
-		<section>
+		<h1>Sssh - don't tell anyone!</h1>
 			<figure style="border: none; box-shadow: none;">
 				<a href="https://www.youtube.com/watch?v=pXPXMxsXT28">
 					<img loading=lazy width=540 height=960 src="/images/clever.webp" alt="The bad guy from the 'The Net' saying 'clever girl'" /></a>
 				<figcaption>Click the image</figcaption>
 			</figure>
-		</section>
 	</main>
 
 	<footer>
