--- a/pages/projects.html
+++ b/pages/projects.html
@@ -53,7 +53,7 @@
 	</nav>
 
 	<main>
-		<h2>My programming projects</h2>
+		<h1>NostraDavid's' programming projects</h1>
 		<link async rel=stylesheet href="/styles/projects.css" />
 		<details>
 			<summary>
