--- a/pages/about.html
+++ b/pages/about.html
@@ -53,30 +53,27 @@
 	</nav>
 
 	<main>
-		<h2 id=about>
-			<a href="#about" class="self-link"></a>
-			About NostraDavid and the Thaumatorium
-		</h2>
-		<h3 id=nostradavid>
+		<h1>About NostraDavid and the Thaumatorium</h1>
+		<h2 id=nostradavid>
 			<a href="#nostradavid" class="self-link"></a>
 			NostraDavid, the author
-		</h3>
+		</h2>
 		<p>I'm someone who's sick of the state of the web and you know what they say: </p>
 		<blockquote>Improve the world, start with yourself - <a href="https://nl.wikipedia.org/wiki/Bond_zonder_Naam">Bond Zonder Naam</a></blockquote>
 		<p>This is why I started with the basics: HTML, CSS and JS. Anything else is deemed <i>bloat</i></p>
-		<h3 id=thaumatorium>
+		<h2 id=thaumatorium>
 			<a href="#thaumatorium" class="self-link"></a>
 			Thaumatorium
-		</h3>
-		<h4 id=name>
+		</h2>
+		<h3 id=name>
 			<a href="#name" class="self-link"></a>
 			The name
-		</h4>
+		</h3>
 		<p>It's based on the word <i>thaumaturge</i>, meaning <i>miracle worker</i>, thus <em>Thaumatorium</em> is where miracles are performed.</p>
-		<h4 id=reason>
+		<h3 id=reason>
 			<a href="#reason" class="self-link"></a>
 			The reason - the why
-		</h4>
+		</h3>
 		<p>I wanted a place where I could post my articles, but I found my free <a href="https://thaumatorium.wordpress.com/">Wordpress site</a> too slow, too bloated, too messy, so I started to search for a way to still create and host articles, without needing bloat like Wordpress.</p>
 		<p>I started with thinking about using something like Angular and React. They were the hot new thing in town, so why not try that? Turns out they both have a tendency to become pretty damn complex pretty damn fast - that's my personal experience anyway.</p>
 		<p>After finding Elm, a Haskell-like language that compiles to JS I though to use that as it promised small and (more importantly) <em>fast</em> websites.</p>
@@ -86,10 +83,10 @@
 		<p>The site quickly grew too big for this, so I changed it up by splitting the site in separate HTML pages, but <code>index.html</code> contained the generic header/footer HTML, while the other HTML files contained the articles.</p>
 		<p>In doing so - splitting the site, but mostly handling things like a PWA - I broke the back/forward buttons and browser history...</p>
 		<p>In the end I decided in writing just separate HTML pages, which means I have a bunch of duplicate HTML, but I'm OK with that, as I know enough R<sup>E</sup>G<sub>E</sub>X to edit <em>all</em> HTML headers in one fell swoop!</p>
-		<h4 id=what-else>
+		<h3 id=what-else>
 			<a href="#what-else" class="self-link"></a>
 			What else
-		</h4>
+		</h3>
 		<p>I'm pretty fucking sick of all the political bullshit/polarisation I see online, so miss me with that shit.</p>
 		<p>That is why on my future news aggregator I'm completely forbidding that bullshit.</p>
 		<p>There's a lot more that I'm going to forbid, but I think that's one of the big ones - one you <em>don't</em> see on other sites, unlike the stereotypical "no racism, hate, etc" virtue signalling bullshit.</p>
@@ -106,14 +103,17 @@
 		<p>I'm also just so fucking done with racist shitheads that think it's OK to act racist against white humans, because they are part of some minority – I'm looking at you WaPo, hiring Sarah Jeong and Karen Attiah. Fuck you too.</p>
 		<p>PS: The definition of the word "Racism" is NOT "power + prejudice". That's a bullshit definition that should stay in the trashheap that is sociology. I'll fucking yeet you from my site if you pull that shit on people too.</p>
 		<p>PPS: Right-wingers may now start to get the idea I'm /their guy/. I'm not. Stop being obnoxious retards and get your shit together. Please.</p>
-		<h4 id=the-cure>
+		<h3 id=the-cure>
 			<a href="#the-cure" class="self-link"></a>
 			The cure
-		</h4>
+		</h3>
 		<p><q>Great minds discuss ideas, average minds discuss events, small minds discuss people.</q> – Eleanor Roosevelt</p>
 		<p>We (the internet at large) are too busy with discussing people, not even events. I want to see the internet move <em>back</em> to discussing ideas. That was more the case on Reddit back in the days - <a href="https://web.archive.org/web/20081229163556/https://reddit.com/">Reddit on 2008-12-29</a> was much more about ideas, not events or people.</p>
 		<p>The normies have invaded the internet. That's not necessarily bad, but what is is that they came in such numbers they did not need to adapt to our netizenship and changed our internet culture. <em>For the worse</em>, mind you. I hope to one day have enough influence to change that, for the betterment of humanity.</p>
-		<h2>Linguistic Cleansing pisses me the fuck off</h2>
+		<h3 id=linguistic-cleansing>
+			<a href="#linguistic-cleansing" class="self-link"></a>
+			Linguistic Cleansing pisses me the fuck off
+		</h3>
 		<p>More virtue signalling, this time coming out of the Linux community...</p>
 		<blockquote>avoid introducing new usage of 'master / slave' (or 'slave' independent of 'master') and 'blacklist / whitelist'</blockquote>
 		<p><a href="https://www.kernel.org/doc/html/latest/process/coding-style.html#naming">source</a></p>
