fix missing closing tags

--- a/index.html
+++ b/index.html
@@ -204,44 +204,38 @@
 			<li><time>2020-05-09</time> <del>Transfer my articles from my <a href=https://thaumatorium.wordpress.com>ye olde wordpress</a> site</del>
 		</ul>
 
-			<h2 id=tools>
-				<a href="#tools" class="self-link"></a>
-				Tools
-			</h2>
-			<p>Online tools that I regularly use</p>
-			<ul>
-				<li><a href="https://jakearchibald.github.io/svgomg/">SVGOMG</a>
-				<li><a href="https://boxy-svg.com/app/">Boxy SVG editor</a>
-			</ul>
-		</section>
-		<section>
-			<h2 id=support>
-				<a href="#support" class="self-link"></a>
-				Support
-			</h2>
+		<h2 id=tools>
+			<a href="#tools" class="self-link"></a>
+			Tools
+		</h2>
+		<p>Online tools that I regularly use</p>
+		<ul>
+			<li><a href="https://jakearchibald.github.io/svgomg/">SVGOMG</a>
+			<li><a href="https://boxy-svg.com/app/">Boxy SVG editor</a>
+		</ul>
+		<h2 id=support>
+			<a href="#support" class="self-link"></a>
+			Support
+		</h2>
 
-			<figure style="display: inline-block">
-				<a href=https://ko-fi.com/J3J61VMSC rel=noopener target=_blank>
-					<img loading=lazy width=223 height=30 src="/images/ko-fi-support.svg" alt='Buy Me a Coffee at ko-fi.com' />
-				</a>
-				<figcaption>Why yes, that <em>is</em> a custom Ko-fi button,<br> based on one that <a href="https://www.ko-fi.com/img/githubbutton_sm.svg">Ko-fi provided</a>,<br> but optimized AF. Why do you ask?</figcaption>
-			</figure>
+		<figure style="display: inline-block">
+			<a href=https://ko-fi.com/J3J61VMSC rel=noopener target=_blank>
+				<img loading=lazy width=223 height=30 src="/images/ko-fi-support.svg" alt='Buy Me a Coffee at ko-fi.com' />
+			</a>
+			<figcaption>Why yes, that <em>is</em> a custom Ko-fi button,<br> based on one that <a href="https://www.ko-fi.com/img/githubbutton_sm.svg">Ko-fi provided</a>,<br> but optimized AF. Why do you ask?</figcaption>
+		</figure>
 
-			<figure style="display: inline-block">
-				<h3>Want to use the same style of comments for your site?</h3>
-				<p>Use my <a href="https://talk.hyvor.com?aff=5844">referral link</a> to sign up! <em>If</em> you then pay Hyvor 30% will be passed onto me!
-			</figure>
-		</section>
-		<section>
-			<hr>
-			<div id="hyvor-talk-view"></div>
-			<script type="text/javascript">
-				var HYVOR_TALK_WEBSITE = 1095; // DO NOT CHANGE THIS
-				var HYVOR_TALK_CONFIG = { url: false, id: false };
-			</script>
-			<script async type="text/javascript" src="//talk.hyvor.com/web-api/embed"></script>
-		</section>
-		</article>
+		<figure style="display: inline-block">
+			<h3>Want to use the same style of comments for your site?</h3>
+			<p>Use my <a href="https://talk.hyvor.com?aff=5844">referral link</a> to sign up! <em>If</em> you then pay Hyvor 30% will be passed onto me!</p>
+		</figure>
+		<hr>
+		<div id="hyvor-talk-view"></div>
+		<script type="text/javascript">
+			var HYVOR_TALK_WEBSITE = 1095; // DO NOT CHANGE THIS
+			var HYVOR_TALK_CONFIG = { url: false, id: false };
+		</script>
+		<script async type="text/javascript" src="//talk.hyvor.com/web-api/embed"></script>
 	</main>
 
 	<footer>
