--- a/pages/experimentations.html
+++ b/pages/experimentations.html
@@ -120,8 +120,8 @@
 		<p>The following shows how a details element can be used to hide some controls by default:</p>
 		<details>
 			<summary><label for=fn>Name & Extension:</label></summary>
-			<p><input type=text id=fn name=fn value="Pillar Magazine.pdf">
-			<p><label><input type=checkbox name=ext checked> Hide extension</label>
+			<p><input type=text id=fn name=fn value="Pillar Magazine.pdf"></p>
+			<p><label><input type=checkbox name=ext checked> Hide extension</label></p>
 		</details>
 		<h2>CSS border radius</h2>
 		<style>
