add open and close quote to secret project HTML codes

--- a/pages/knowledge-base.html
+++ b/pages/knowledge-base.html
@@ -450,6 +450,14 @@ listedEmoticons.sort((a, b) => b.length - a.length)
 					<td>Ü</td>
 					<td><code>&amp;Uuml;</code></td>
 				</tr>
+				<tr>
+					<td>“</td>
+					<td><code>>&amp;OpenCurlyDoubleQuote;</code></td>
+				</tr>
+				<tr>
+					<td>”</td>
+					<td><code>>&amp;CloseCurlyDoubleQuote;</code></td>
+				</tr>
 			</table>
 		</details>
 	</main>
