add pi symbol to secret project of NDKB

--- a/pages/knowledge-base.html
+++ b/pages/knowledge-base.html
@@ -458,6 +458,10 @@ listedEmoticons.sort((a, b) => b.length - a.length)
 					<td>”</td>
 					<td><code>>&amp;CloseCurlyDoubleQuote;</code></td>
 				</tr>
+				<tr>
+					<td>π</td>
+					<td><code>>&amp;pi;</code></td>
+				</tr>
 			</table>
 		</details>
 	</main>
