--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@
 		</h2>
 		<p>The date you see is <q>date created</q>, not <q>edited</q> or <q>done</q></p>
 		<ul>
+			<li><time>2020-08-07</time> Create an article that explains basic Twitch emotes (monkaS/monkaW, pepeD/pepeJAM/catJAM, WutFace, etc)
+			<li><time>2020-08-07</time> Add a Settings page where the user can change cookie settings - show which cookies are set, show how the user can check which cookies are set for Chrome/Edge/Firefox, etc
+			<li><time>2020-08-07</time> Hide comments by default and add a button to load/show them - save this setting in a cookie.
+			<li><time>2020-08-07</time> Enable the use of query strings and cookies to manipulate how the site looks (enable/disable comments, enable disable disclaimers)
 			<li><time>2020-08-04</time> Add FB/Twitter metadata to all other pages, especially the Template page.
 			<li><time>2020-08-04</time> Add canonical links to all other pages (other than the frontpage).
 			<li><time>2020-08-04</time> Create an article where I explain how I created this site. Use keywords to improve the pull to this site.
