close "Information for a secret project"

--- a/pages/knowledge-base.html
+++ b/pages/knowledge-base.html
@@ -317,7 +317,7 @@ listedEmoticons.sort((a, b) => b.length - a.length)
 			</table>
 		</details>
 
-		<details open>
+		<details>
 			<summary>
 				<h2>Information for a secret project</h2>
 			</summary>
