--- a/pages/knowledge-base.html
+++ b/pages/knowledge-base.html
@@ -57,7 +57,7 @@
 		<p>For now (<time>2020-07-16</time>) it's just snippets of JS and regex that I use every now and then</p>
 		<p>I'd use GitHub for that, but I have a tendency to forget <a href="https://gist.github.com/NostraDavid">GitHub Gist</a> exists…</p>
 
-		<details open>
+		<details>
 			<summary>
 				<h2>Online Tools</h2>
 				<p>These are websites/webpages that I use to optimize this site.</p>
