move scripts folder from projects folder into the project (root) folder

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -84,10 +84,10 @@
 			<p>Over the years I created different versions (a 2D and even a 3D OpenGL variant!)</p>
 			<p>Now that I know some HTML/CSS/JS, I decided to recreate this project for the web with plain HTML/CSS/JS! No crazy libraries needed!</p>
 			<canvas id=starfield></canvas>
-			<script type=module src=/projects/scripts/starfield.mjs></script>
+			<script type=module src=/scripts/starfield.mjs></script>
 		</details>
 
-		<details>
+		<details open>
 			<summary>
 				<h3>Mocking Spongebob Text Generator (MSTG)</h3>
 			</summary>
@@ -95,10 +95,9 @@
 				<img loading=lazy width=201 height=115 src=/images/mockbob.png alt="A generated starfield - the stars are shown moving from right to left. They are represented by circles of different sizes, but not brightness and color (yet).">
 				<figcaption>Mocking Spongebob</figcaption>
 			</figure>
-			<h3>Mocking Spongebob Text Generator</h3>
 			<label>input:<textarea id=mstg_in></textarea></label>
 			<label>output - click to copy to clipboard:<textarea id=mstg_out readonly></textarea></label>
-			<script type=module src=/projects/scripts/mstg.mjs></script>
+			<script type=module src=/scripts/mstg.mjs></script>
 		</details>
 
 		<details>
@@ -109,10 +108,10 @@
 			<h3>ROT13</h3>
 			<label>input:<textarea id=rot13_in></textarea></label>
 			<label>output - click to copy to clipboard:<textarea id=rot13_out readonly></textarea></label>
-			<script type=module src=/projects/scripts/rot13.mjs></script>
+			<script type=module src=/scripts/rot13.mjs></script>
 		</details>
 
-		<details>
+		<details open>
 			<summary>
 				<h3>Slugify</h3>
 			</summary>
@@ -123,7 +122,7 @@
 			<h3>Slugify</h3>
 			<label>input:<textarea id=slugify_in></textarea></label>
 			<label>output - click to copy to clipboard:<textarea id=slugify_out readonly></textarea></label>
-			<script type=module src=/projects/scripts/slugify.mjs></script>
+			<script type=module src=/scripts/slugify.mjs></script>
 		</details>
 
 		<details>
@@ -136,7 +135,7 @@
 			<h3>Decode</h3>
 			<label>input:<textarea id=base64_in_decode></textarea></label>
 			<label>output - click to copy to clipboard:<textarea id=base64_out_decode readonly></textarea></label>
-			<script type=module src=/projects/scripts/base64.mjs></script>
+			<script type=module src=/scripts/base64.mjs></script>
 		</details>
 
 		<details>
@@ -195,7 +194,7 @@ fetch('https://hacker-news.firebaseio.com/v0/user/NostraDavid.json')
 			<h3>Decode</h3>
 			<label>input:<textarea id=t2e-in-decode></textarea></label>
 			<label>output - click to copy to clipboard:<textarea id=t2e-out-decode readonly></textarea></label>
-			<script type=module src=/projects/scripts/t2e.mjs></script>
+			<script type=module src=/scripts/t2e.mjs></script>
 		</details>
 
 		<details>
@@ -208,7 +207,7 @@ fetch('https://hacker-news.firebaseio.com/v0/user/NostraDavid.json')
 			<h3>Decode</h3>
 			<label>input:<textarea id=germanizer-in-decode></textarea></label>
 			<label>output - click to copy to clipboard:<textarea id=germanizer-out-decode readonly></textarea></label>
-			<script type=module src=/projects/scripts/germanizer.mjs></script>
+			<script type=module src=/scripts/germanizer.mjs></script>
 		</details>
 	</main>
 
